fix: horizontal overflow in studio

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,6 @@
+.portfolio {
+  overflow-x: hidden;
+}
 .custom-border {
     border: 5px 2px solid black;
 }
@@ -11,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
+    overflow-x: hidden;
     /* align-items: center; */
     /* position: absolute;
     top: 80%;
